Makeing TextSummarizer CLI Java 8 compatible